# rs_synca

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
book/: book.toml
book/src/: SUMMARY.md  about.md  links.md  start_guide.md  tests.md
book/src/development/: index.md
book/src/examples/: http.md  index.md  pg_as_calc.md
book/src/release_notes/: index.md
book/src/usage/: docs.md  fn.md  index.md  macros.md  traits.md  virtual_attributes.md
examples/pg_as_calc/: Cargo.toml  README.md
examples/pg_as_calc/src/: lib.rs
scripts/: book.sh  tests.sh  tests.yml
synca/: Cargo.toml  README.md
synca/src/: attr.rs  docs.rs  fold.rs  fold_async.rs  fold_sync.rs  input.rs  lib.rs  replace.rs  synca.rs
synca/src/fold/: fold.rs  mod.rs
synca/src/fold/attrs/: attr.rs  attrs.rs  docs.rs  mod.rs
tests/: run.sh  test.sh
