[package]
name = "synca"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sgr-team/rs_synca"
description = "Write asynchronous code, and synca will create a synchronous version."
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.23", features = [ "full", "fold", "extra-traits" ] }
quote = "1.0.29"
proc-macro2 = "1.0.69"

[dev-dependencies]
postgres = { version = "0.19.7" }
tokio-postgres = { version = "0.7.10" }