[package]
name = "synca_example_pg_as_calc"
version = "0.1.0"
edition = "2021"

[features]
default = [ ]
sync = [ "dep:postgres" ]
tokio = [ "dep:tokio", "dep:tokio-postgres" ]

[dependencies]
postgres = { version = "0.19.7", optional = true }
synca = { path = "../../synca" }
tokio = { version = "1.35.1", features = [ "full" ], optional = true }
tokio-postgres = { version = "0.7.10", optional = true }